<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/dimen_96dp"
            android:layout_height="@dimen/dimen_96dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/resfeber_logo" />

        <com.travel.resfeber.custom.TfTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/app_name"
            android:textColor="@color/colorCloud"
            android:textSize="@dimen/sp26"
            app:ftype="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:orientation="vertical"
            android:padding="@dimen/dimen_6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/edt_border"
                android:minHeight="@dimen/dimen_48dp">

                <com.travel.resfeber.custom.TfEditText
                    android:id="@+id/edtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:background="@color/colorBlack"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    app:fEdittype="regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/edt_border"
                android:minHeight="@dimen/dimen_48dp">

                <com.travel.resfeber.custom.TfEditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:background="@color/colorBlack"
                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    app:fEdittype="regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/edt_border"
                android:minHeight="@dimen/dimen_48dp">

                <com.travel.resfeber.custom.TfEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:background="@color/colorBlack"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    app:fEdittype="regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/edt_border"
                android:minHeight="@dimen/dimen_48dp">

                <com.travel.resfeber.custom.TfEditText
                    android:id="@+id/edtDob"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:background="@color/colorBlack"
                    android:hint="@string/dob"
                    android:inputType="date"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    app:fEdittype="regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/edt_border"
                android:minHeight="@dimen/dimen_48dp">

                <com.travel.resfeber.custom.TfEditText
                    android:id="@+id/edtMobile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    android:background="@color/colorBlack"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    app:fEdittype="regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/edt_border"
                android:minHeight="@dimen/dimen_48dp">

                <com.travel.resfeber.custom.TfEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_2dp"
                    android:background="@color/colorBlack"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    app:fEdittype="regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:background="@drawable/edt_border"
                android:minHeight="@dimen/dimen_48dp">

                <com.travel.resfeber.custom.TfEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_2dp"
                    android:background="@color/colorBlack"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16"
                    app:fEdittype="regular" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_4dp">

                <com.travel.resfeber.custom.TfButton
                    android:id="@+id/btnSignUp"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="@dimen/dimen_120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/dimen_4dp"
                    android:background="@drawable/button"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />

                <com.travel.resfeber.custom.TfButton
                    android:id="@+id/btnCancel"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="@dimen/dimen_120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_4dp"
                    android:background="@drawable/button"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp16" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</ScrollView>